<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">This is the jadex-android demo application. Choose a demo to run.</string>
    <string name="starting">Starting Jadex Platform...</string>
    <string name="started">Platform started:  </string>
    <string name="app_name">Jadex Android Demos</string>
    <string name="main_launchBPMNDemo">Launch BPMN Demo</string>
    <string name="main_launchBDIDemo">Launch BDI Demo</string>
    <string name="main_launchBDIV3Demo">Launch BDI V3 Demo</string>
    <string name="main_launchBenchmarkDemo">Launch Benchmark Demo</string>
    <string name="main_launchEventDemo">Launch Event Demo</string>
    <string name="main_launchRestDemo">Launch Rest Demo</string>
    <string name="main_launchControlCenterDemo">Launch Control Center</string>
    <string name="event_demoDescription">This Activity demonstrates the usage of messages and "events", which allow simple communication between agent and activity.
        If you press the button below, a message is sent to the agent and then an event is thrown back to the activity.</string>
    <string name="event_pingAgentButton">pingAgentButton</string>
    <string name="bpmn_demoDescription">This Activity demonstrates the usage of BPMN-Workflows in Jadex-Android.
         Please wait until the platform is started.</string>
    <string name="benchmark_openMenuButton">Choose Benchmark</string>
    <string name="bdi_demoDescription">This Activity demonstrates the usage of BDI Agents in Jadex-Android.
         Please wait until the platform is started.</string>
    <string name="bdiv3_demoDescription">This Activity demonstrates the usage of BDI V3 Agents in Jadex-Android.</string>
    <string name="rest_demoDescription">This Activity uses a Jadex Component to encapsulate a call to the Google Chart REST API.</string>
    <string name="controlCenter_demoDescription">Control Center</string>
     
    <string name="rest_getChartButtonLabel">Get Chart</string>
    <string name="rest_startChartProviderButtonLabel">Start Chart Provider</string>
    <string name="rest_height">Height: </string>
    <string name="rest_width">Width: </string>
    <string name="rest_addDataItemButtonLabel">Add Data</string>
    <string name="rest_dataRowsLabel">Data Rows</string>
    <string name="rest_labelLabel">Labels:</string>
    <string name="rest_dataLabel">"Data: "</string>
    
    
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>