<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/rest_demoDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_demoDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1" >

        <Spinner
            android:id="@+id/rest_chartTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/chartType" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_width"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/rest_width_text"
                    android:layout_width="30dip"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/rest_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:indeterminate="false" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rest_height"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/rest_height_text"
                    android:layout_width="30dip"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/rest_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:text="@string/rest_labelLabel"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/rest_labelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dip"
            android:text="@string/rest_dataRowsLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/rest_dataList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="2.0sp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rest_addDataItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_addDataItemButtonLabel" />

        <Button
            android:id="@+id/rest_getChartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest_getChartButtonLabel" />
    </LinearLayout>

</LinearLayout>